# Pregnancy-Related_Complications_Mortality_in_US

./: README.md  requirements.txt
DataExtractor/: data_reader.py
Visualization_Physical_metrics/: Physical_plots_CollatedData_and_Code.ipynb
WonderAPITrial/: CDC+WONDER+API+Example_D149.ipynb  Natality, 2016-2021 expanded Request Form.html  request.xml
mcheung_analysis_temp_folder/data_csv/: abnormal_conditions_by_prenatal.txt  abnormal_conditions_by_prenatal_total.csv  abnormal_conditions_by_prenatal_total.txt  edu_marital-mobidity.csv  edu_marital-total_births.csv  races-morbidity.csv  races-morbidity.txt  (+6 more)
presentation_materials/: ece143-final_presentation-cues.docx  ece143-final_presentation.pptx
wonderD149Data/: .gitignore  README.md  pyproject.toml
wonderD149Data/examples/: All_Visualisation.ipynb  Pregnancy_related_births_data_high_negative_correlation.html  Pregnancy_related_births_data_high_positive_correlation.html  analysis.ipynb  prenatalanalysis.ipynb  sampledataexploration.ipynb  wonderD149DataCorrelation.ipynb  wonderD149DataExample.ipynb
wonderD149Data/src/visualization/: file.csv  file.xlsx  helper.py
wonderD149Data/src/wonderD149Data/: wonderD149Data.py
wonderD149Data/src/wonderD149Data/data/: __init__.py  b_attr.json  data_column_birth_analysis.json  f_attr.json  helper.py  m_attr.json  misc_attr.json  o_attr.json  races-total_births.csv  races-total_deaths.csv  states-total_births.csv  v_attr.json
wonderD149Data/src/wonderD149Data/data/pregnancy_timeline/: 5-total_deaths_include_lmd_by_year.csv
wonderD149Data/tests/: test_helper.py
(+12 files in other folders)
